# CNS11643-OpenData

./: .gitignore  CNS11643 Release.json  OpenDataFilesList.csv  README.md  pyproject.toml  release.txt  sync_metadata.json
.github/: downstream-projects.json
.github/workflows/: ci.yml  notify-downstream.yml  sync-cns11643.yml
Tables/Properties/: CNS_cangjie.txt  CNS_component.txt  CNS_component_ref.txt  CNS_radical.txt  CNS_stroke.txt  CNS_strokes_sequence.txt
scripts/: check_update.py  config.py  sync_cns11643.py  verify_data.py
tests/: test_sync.py
