[project]
name = "cns11643-opendata"
version = "1.0.0"
description = "CNS11643 全字庫開放資料自動同步工具"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "TzuYuan Yin", email = "yintzuyuan@erikyin.net" }
]
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "UP"]
ignore = ["E501"]  # 行長度由 line-length 控制

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # 測試中允許 assert

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
